--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--Google Font-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alumni+Sans">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Alumni+Sans&family=Freckle+Face&family=Roboto:wght@300;400;500">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -42,7 +43,18 @@
     <div></div>
     <div class="d-flex flex-column text-center grease">
       <span class="display-1">YOU<br>WANT PIZZA</span>
-      <p><a href="#menu" class="btn btn-lg btn-dark hover-btn fs-2">Feel the Grease</a></p>
+      <p><a href="#menu" class="btn btn-lg btn-dark hover-btn fs-2 grease-hide ">Feel the Grease</a>
+      </p>
+      <div class="d-lg-none"> <!-- This will hide the div on screens larger than lg (large) -->
+        <button type="button" class="btn btn-lg btn-dark fs-2" id="feelTheGrease">
+          Feel the Grease
+        </button>
+        <div class="dropdown-menu dropdown-menu-center">
+          <a class="dropdown-item" href="#menu">Menu</a>
+          <a class="dropdown-item" href="#about">About</a>
+          <a class="dropdown-item" href="#contact">Contact</a>
+        </div>
+      </div>
     </div>
     <div class="d-flex justify-content-start">
       <span class="bg-dark text-white p-3 h2">Open from 10am to 11pm - Call 555-555-5555</span>
