add dropdown border class

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
     <div></div>
     <div class="d-flex flex-column text-center grease">
       <span class="display-1">YOU<br>WANT PIZZA</span>
-      <p><a href="#menu" class="btn btn-lg btn-dark hover-btn fs-2 grease-hide ">Feel the Grease</a>
+      <p><a href="#menu" class="btn btn-lg btn-dark hover-btn fs-2 grease-hide ">Explore Our Grease</a>
       </p>
       <div class="d-lg-none"> <!-- This will hide the div on screens larger than lg (large) -->
         <button type="button" class="btn btn-lg btn-dark fs-2" id="feelTheGrease">
-          Feel the Grease
+          Explore Our Grease
         </button>
         <div class="dropdown-menu dropdown-menu-center">
           <a class="dropdown-item" href="#menu">Menu</a>
-          <a class="dropdown-item" href="#about">About</a>
+          <a class="dropdown-item dropdown-border" href="#about">About</a>
           <a class="dropdown-item" href="#contact">Contact</a>
         </div>
       </div>
