--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Bloaty's Pizza Hog</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!--Google Font-->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Alumni+Sans&family=Freckle+Face&family=Roboto:wght@300;400;500">
