adjust form id. adj style again. and other

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           feed your needs with CHEESE.
         </p>
         <p><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
-        <form action="form.html" target="_blank">
+        <form action="form.html" target="_self">
           <div class="mb-3">
             <input type="text" class="form-control extra-large" placeholder="Name" required name="Name">
           </div>
