--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
 
   <!-- Navbar -->
 
-  <nav class="navbar navbar-expand-lg fixed-top opacity-hover-off" id="myNavbar">
+  <nav class="navbar navbar-expand-lg fixed-top opacity-hover-off" id="myNavbar1">
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
